# market_tool

./: .gitignore  .gitmodules  package-lock.json  package.json  vite.config.ts
.github/workflows/: quick-windows-smoke.yml  release-desktop.yml
backend/channel_nest_api/: .eslintrc.js  Makefile  package-lock.json  package.json
backend/channel_nest_api/config/: config.example.json  index.js
backend/channel_nest_api/src/: app.js  (+1 more)
backend/marketing-master-api/: .gitignore  package-lock.json  package.json
docs/: github-actions-release.md  refactor-client-architecture.md  refactor-client-todo.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  styles.css
scripts/: generate-app-icons.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/xhs-signer/: README.md  xhs_creator_260411.js
src-tauri/src/: channel_urls.rs  common.rs  domain.rs  http_callback.rs  json_ext.rs  lib.rs  local_store.rs  main.rs  oauth.rs  playwright_browser.rs  plugin_accounts.rs  relay.rs  settings.rs  state.rs  webview_windows.rs
src-tauri/src/browser/: cdp.rs  mod.rs  system_browser.rs
src-tauri/src/channels/: bilibili.rs  douyin.rs  kuaishou.rs  mod.rs  wechat_channels.rs  xiaohongshu.rs
src-tauri/src/commands/: channel.rs  mod.rs
src-tauri/src/services/: channel_service.rs  mod.rs
src-tauri/src/storage/: local_store.rs  mod.rs
src-tauri/src/webview_windows/: cookies.rs  creator_home.rs  lifecycle.rs  plugin_auth.rs
(+120 files in other folders)
