[package]
name = "channel-nest"
version = "1.0.6"
description = "Channel Nest desktop client"
authors = ["fanxiao"]
edition = "2021"

[lib]
name = "channel_nest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tokio = { version = "1", features = ["io-util", "net", "sync"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
